refactored because I made a dumb mistake and accidentally deleted my package.json file

--- a/Logic-Manual-Online-Editor/client/public/index.html
+++ b/Logic-Manual-Online-Editor/client/public/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head> <!-- Importantish, this is where we can start wrapping components  -->
   <meta charset="UTF-8" />
   <title>Lean 4 Web</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
+
 
 <body>
   <div id="root"></div>
